# BUAA_TeachingEvaluation_2024Winter

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  form.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
assets/icons/: icon.icns
backend/: api.py  evaluator.py  main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.module.css  App.tsx  main.tsx
frontend/src/components/: Button.module.css  Button.tsx  Card.module.css  Card.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  Input.module.css  Input.tsx  LanguageSwitch.module.css  LanguageSwitch.tsx  LoadingScreen.module.css  LoadingScreen.tsx  LogViewer.module.css  LogViewer.tsx  Logo.module.css  Logo.tsx  Progress.module.css  Progress.tsx  RadioGroup.module.css  RadioGroup.tsx  Toast.module.css  Toast.tsx  index.ts
frontend/src/hooks/: index.ts  useAnimation.ts  useApi.ts
frontend/src/i18n/: context.tsx  index.ts  translations.ts
frontend/src/styles/: global.css
frontend/src/types/: api.ts
scripts/: generate_icons.py
scripts/linux/: app.spec  build.sh
scripts/macos/: app.spec  build.sh
scripts/windows/: app.spec  build.ps1
