[project]
name = "buaa-evaluation"
version = "1.2.0"
description = "Teaching evaluation assistant for BUAA"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "ZenAlexa" }
]
keywords = ["buaa", "education", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Desktop Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.3",
    "pywebview>=5.3",
    "urllib3>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.11.0",
    "ruff>=0.8.0",
]
macos = [
    "pyobjc>=10.3",
]

[project.urls]
Homepage = "https://github.com/ZenAlexa/BUAA_TeachingEvaluation_2024Winter"
Repository = "https://github.com/ZenAlexa/BUAA_TeachingEvaluation_2024Winter"
Issues = "https://github.com/ZenAlexa/BUAA_TeachingEvaluation_2024Winter/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "evaluator"]
